<resources>
    <string name="app_name">Run</string>
    <string name="nav_header_name">游客</string>
    <string name="homepage">主页</string>
    <string name="exercise">活动</string>
    <string name="group">运动圈</string>
    <string name="userProfile">用户资料</string>

    <string name="total_distance">总英里</string>
    <string name="sum_runtime">总跑步次数</string>
    <string name="avg_speed">平均配速</string>
    <string name="avg_calorie">平均热量</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="username">昵称</string>
    <string name="email_type_error">邮箱格式不合法</string>
    <string name="password_type_error">密码格式不合法</string>
    <string name="username_type_error">昵称格式不合法</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="show_time">00:00:00</string>
    <string name="show_distance">0</string>
    <string name="label_time">时长</string>
    <string name="label_distance">距离（米）</string>
    <string name="label_speed">平均配速</string>
    <string name="start_locate">开始</string>
    <string name="stop_locate">暂停</string>
    <string name="end_locate">结束</string>
    <string name="distance_unit">公里</string>
    <string name="calorie_unit">大卡</string>
    <string name="set_weight">你的体重（kg）:</string>

    <string name="format_time">HH:mm:ss</string>
    <string name="format_min">mm:ss</string>
    <string name="format_date_hour">yyyy-MM-dd HH时</string>

    <string name="group_location">地址</string>
    <string name="group_loading"></string>


    <string name="userProfile_weight">体重</string>
    <string name="userProfile_click_change_head">点击改变头像</string>


</resources>
