<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/icons"
    tools:context=".activity.RunActivity">

    <com.amap.api.maps.MapView
        android:id="@+id/map"
        android:layout_weight="15"
        android:layout_width="match_parent"
        android:layout_height="0dp">
    </com.amap.api.maps.MapView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/icons">

        <TextView
            android:textStyle="bold"
            android:id="@+id/show_time"
            android:text="@string/show_time"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/icons"
            />

        <TextView
            android:textStyle="bold"
            android:id="@+id/show_distance"
            android:text="@string/show_distance"
            android:textSize="25sp"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/icons"
            />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@color/icons">

        <TextView
            android:id="@+id/time_label"
            android:text="@string/label_time"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_weight="1.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/icons" />

        <TextView
            android:id="@+id/distance_label"
            android:text="@string/label_distance"
            android:layout_weight="1"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/icons" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1.5">

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/icons"
            android:textSize="20sp"
            android:text="@string/start_locate"/>

        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/icons"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/end_locate"/>

    </LinearLayout>


</LinearLayout>
