<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.czx.run.activity.ShowDetailActivity">

    <com.amap.api.maps.MapView
        android:id="@+id/map_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </com.amap.api.maps.MapView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_show_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:text="lkjsdlfjkls"
            android:textSize="18sp"
            android:textColor="@color/yellow"
            android:background="@drawable/textview_corner"
            android:alpha="0.8"/>

        <LinearLayout
            android:id="@+id/l1"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                android:text="@string/label_time"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                android:text="@string/label_speed"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/textPrimary"
                android:text="@string/calorie_unit"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_above="@id/l1"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_show_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tv_show_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tv_show_calorie"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="30dp"
            android:layout_above="@id/l2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_show_distance"
                android:text="3.1"
                android:textSize="40sp"
                android:textColor="@color/textPrimary"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/textPrimary"
                android:text="@string/distance_unit"/>
        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
