<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.UserProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin">


                <LinearLayout
                    android:id="@+id/layout_head"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_userProfile_head"
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:layout_margin="8dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/userProfile_click_change_head"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="18dp">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/username"
                            android:textSize="25sp"/>

                        <TextView
                            android:id="@+id/tv_userProfile_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp" />

                    </LinearLayout>


                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="@string/email"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/tv_userProfile_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/userProfile_weight"
                            android:textSize="18sp"/>

                        <TextView
                            android:id="@+id/tv_userProfile_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            tools:text="65"/>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>



        </android.support.v7.widget.CardView>

</LinearLayout>
