<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:id="@+id/layout_run"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:src="@drawable/ic_run_216dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="开始跑步"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="30sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_above="@id/layout_run"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_main_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/show_distance"
            android:textColor="@color/colorPrimary"
            android:textSize="85sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/total_distance"
            android:textAppearance="@style/BlackText"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_shoe_128dp"/>

                <TextView
                    android:id="@+id/tv_main_runtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_distance"
                    android:gravity="center"
                    android:textAppearance="@style/BlackText"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sum_runtime"
                    android:textSize="16sp"
                    android:textAppearance="@style/GreyText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:padding="3dp"
                    android:src="@drawable/ic_speed_128dp"/>

                <TextView
                    android:id="@+id/tv_main_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_distance"
                    android:gravity="center"
                    android:textAppearance="@style/BlackText"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/avg_speed"
                    android:textSize="16sp"
                    android:textAppearance="@style/GreyText"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_cup_128dp"
                    android:padding="8dp"/>

                <TextView
                    android:id="@+id/tv_main_calorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/show_distance"
                    android:textAppearance="@style/BlackText"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/avg_calorie"
                    android:textSize="16sp"
                    android:textAppearance="@style/GreyText"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/colorDivider">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="七月2016"
                android:textSize="22sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:padding="5dp"
                android:background="@color/colorWhite">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="01"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
